--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "blablabook-back",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch api/src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -7,7 +17,13 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0",
     "zod": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.25",
+    "@types/node": "^20.0.0",
+    "prisma": "^7.2.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
