--- a/back/package.json
+++ b/back/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "tsx watch api/src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "migrate": "prisma migrate dev",
+    "migrate:init": "prisma migrate dev --name init",
+    "seed": "tsx prisma/seed.ts",
+    "reset": "prisma migrate reset"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^7.2.0",
     "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -20,6 +24,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@prisma/config": "^7.2.0",
     "@types/express": "^4.17.25",
     "@types/node": "^20.0.0",
     "prisma": "^7.2.0",
