--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -3,14 +3,11 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-
-    "rootDir": "./api/src",
+    "rootDir": "./src",
     "outDir": "./dist",
-
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["api/src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "api/src/tests"]
+  "include": ["src"]
 }
