--- a/front/next-demo/package.json
+++ b/front/next-demo/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "start": "node server.js",
     "build": "next build",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "express": "^5.2.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
