--- a/front/package.json
+++ b/front/package.json
@@ -3,5 +3,17 @@
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
     "zod": "^4.3.5"
-  }
+  },
+  "name": "front",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
