--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+     "esModuleInterop": true
   },
     "include": ["api/src", "prisma"],
     "exclude": ["node_modules", "dist"]
