--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/O-clock-Dublin/projet-blablabook#readme",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.7"
   }
 }
