--- a/back/package.json
+++ b/back/package.json
@@ -25,9 +25,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.25",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.30",
     "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.9.3"
   }
 }
