--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,8 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/node": "^20.19.30",
     "prisma": "^5.22.0",
