--- a/back/.env.example
+++ b/back/.env.example
@@ -1,3 +1,12 @@
-PORT=3000
-JWT_SECRET=test
-DATABASE_URL="postgresql://test:test@localhost:5432/test"
+PORT=4000
+JWT_SECRET=ameliaInesAnasMathias
+
+POSTGRES_USER=blablabook
+POSTGRES_PASSWORD=blablabook
+POSTGRES_DB=blablabook
+
+# L'API utilise le nom du service 'db' défini dans le compose
+DATABASE_URL=postgresql://blablabook:blablabook@db:5432/blablabook
+
+# Le navigateur utilise localhost pour parler à l'API exposée
+NEXT_PUBLIC_API_URL=http://localhost:4000
