--- a/back/package.json
+++ b/back/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch api/src/app.ts",
+    "dev": "tsx watch api/server.ts",
     "build": "tsc",
     "start": "node dist/app.js",
     "migrate": "prisma migrate dev",
     "migrate:init": "prisma migrate dev --name init",
     "seed": "tsx prisma/seed.ts",
-    "reset": "prisma migrate reset"
+    "reset": "prisma migrate reset",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -28,8 +29,12 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.19.30",
+    "jest": "^30.2.0",
     "prisma": "^5.22.0",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.0.0",
     "typescript": "^5.9.3"
