--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,7 @@
     "migrate:init": "prisma migrate dev --name init",
     "seed": "tsx prisma/seed.ts",
     "reset": "prisma migrate reset",
-    "test": "jest"
+    "test": "tsx --test"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -26,11 +26,13 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.30",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "prisma": "^5.22.0",
     "supertest": "^7.2.2",
