--- a/back/package.json
+++ b/back/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.30",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
